<resources>
    <string name="app_name">Minisofa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo_sofascore">Sofascore logo</string>
    <string name="go_back_button">Go back button</string>

    <string name="leagues">Leagues</string>
    <string name="no_connection_loading_sports">No connection while loading sports</string>
    <string name="no_connection_loading_events">No connection while loading events</string>
    <string name="no_events">No events for selected sport and date</string>
    <string name="no_more_events_or_loading">No more events or loading (placeholder)</string>
    <string name="arrow_right">Arrow right</string>
    <string name="today">TODAY</string>
    <string name="tournament_logo">Tournament logo</string>
    <string name="home_team_logo">Home team logo</string>
    <string name="away_team_logo">Away team logo</string>
    <string name="score">%1$d - %2$d</string>
    <string name="TBA">TBA</string>
    <string name="minute">%1$s\'</string>
    <string name="LIVE">LIVE</string>
    <string name="FT">FT</string>
    <string name="HT">HT</string>
    <string name="incident_icon">Incident icon</string>
    <string name="foul">Foul</string>
    <string name="goal">Goal</string>
    <string name="own_goal">Own goal</string>
    <string name="penalty">Penalty</string>
    <string name="no_results_yet">No results yet</string>
    <string name="event_description">%1$s, %2$s, %3$s, Round %4$d</string>
    <string name="round_n">Round %1$d</string>
    <string name="matches">Matches</string>
    <string name="standings">Standings</string>
    <string name="no_standings_yet">No standings yet</string>
    <string name="view_tournament_details">View Tournament Details</string>
    <string name="league_logo">League logo</string>
    <string name="no_leagues">No leagues</string>
    <string name="no_connection_loading_leagues">No connection while loading leagues</string>

    <string name="team">Team</string>
    <string name="played">P</string>
    <string name="wins">W</string>
    <string name="draws">D</string>
    <string name="losses">L</string>
    <string name="goals">Goals</string>
    <string name="goals_fb">%1$d:%2$d</string>
    <string name="DIFF">DIFF</string>
    <string name="points">PTS</string>
    <string name="percentage">PCT</string>
    <string name="percentage_format">%1$.3f</string>


    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light">\ Light</string>
    <string name="dark">\ Dark</string>
    <string name="system">\ System</string>
    <string name="date_format">Date format</string>
    <string name="dd_mm_yyyy">\ DD / MM / YYYY</string>
    <string name="mm_dd_yyyy">\ MM / DD / YYYY</string>
    <string name="yyyy_mm_dd">\ YYYY / MM / DD</string>
    <string name="about">About</string>
    <string name="about_text_bold">Sofascore Android Academy</string>
    <string name="about_text_normal">Class 2024</string>
    <string name="app_name_title">App name</string>
    <string name="api_credit_title">API credit</string>
    <string name="api_credit">Sofascore</string>
    <string name="developer_title">Developer</string>
    <string name="developer">Marko Šelendić</string>
</resources>