<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/app_bar_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?colorPrimary"
        app:flow_horizontalAlign="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back"
                android:scaleType="centerInside"
                android:contentDescription="@string/go_back_button"
                android:id="@+id/btn_go_back"
                app:tint="?colorSurface"
                android:background="@color/transparent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/settings"
                android:textSize="30sp"
                android:textColor="?colorSurface"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/tv_settings_title"
                />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/sv_settings"
        app:layout_constraintTop_toBottomOf="@id/app_bar_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="16sp"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_theme"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rg_theme"
                android:layout_margin="8dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_light"
                    android:buttonTint="?colorPrimary"
                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_dark"
                    android:buttonTint="?colorPrimary"
                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_system_default"
                    android:buttonTint="?colorPrimary"
                    android:checked="true"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?colorOnSurfaceVariant"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_format"
                android:textSize="16sp"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_date_format"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rg_date_format"
                android:layout_margin="8dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dd_mm_yyyy"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_dd_mm_yyyy"
                    android:buttonTint="?colorPrimary"
                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_dd_yyyy"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_mm_dd_yyyy"
                    android:buttonTint="?colorPrimary"
                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yyyy_mm_dd"
                    android:textSize="16sp"
                    android:textColor="?colorOnSurface"
                    android:id="@+id/rb_yyyy_mm_dd"
                    android:buttonTint="?colorPrimary"
                    android:checked="true"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?colorOnSurfaceVariant"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="28sp"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/tv_about" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_bold"
                android:textSize="18sp"
                android:textColor="?colorOnSurface"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:id="@+id/tv_about_text_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text_normal"
                android:textSize="16sp"
                android:textColor="?colorOnSurface"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/tv_about_text_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?colorOnSurfaceVariant"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_title"
                android:textSize="14sp"
                android:textColor="?colorOnSurfaceVariant"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_app_name_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textColor="?colorOnSurface"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:id="@+id/tv_app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/api_credit_title"
                android:textSize="14sp"
                android:textColor="?colorOnSurfaceVariant"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_api_credit_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/api_credit"
                android:textSize="18sp"
                android:textColor="?colorOnSurface"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:id="@+id/tv_api_credit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_title"
                android:textSize="14sp"
                android:textColor="?colorOnSurfaceVariant"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_developer_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textSize="18sp"
                android:textColor="?colorOnSurface"
                android:textAlignment="textStart"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:id="@+id/tv_developer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?colorOnSurfaceVariant"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp" />
            
            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:src="@drawable/logo_sofascore"
                android:contentDescription="@string/logo_sofascore"
                android:id="@+id/iv_logo_sofascore_settings"
                android:layout_gravity="center"
                app:tint="?colorPrimary"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>