<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?colorSurface"
        android:id="@+id/app_bar_event_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/cl_event_details_header">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/go_back_button"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_tournament_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btn_back"
                app:tint="?colorOnSurface"
                android:background="@color/transparent"
                />
            
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintEnd_toStartOf="@id/tv_event_description"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                android:id="@+id/iv_tournament_logo"
                android:contentDescription="@string/tournament_logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toEndOf="@id/iv_tournament_logo"
                app:layout_constraintTop_toTopOf="@id/iv_tournament_logo"
                app:layout_constraintBottom_toBottomOf="@id/iv_tournament_logo"
                android:id="@+id/tv_event_description"
                android:textColor="?colorOnSurfaceVariant"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_score"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintBottom_toTopOf="@id/tv_home_team"
                android:id="@+id/iv_home_team_logo"
                android:contentDescription="@string/home_team_logo"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_score"
                app:layout_constraintTop_toBottomOf="@id/iv_home_team_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tv_home_team"
                android:textColor="?colorOnSurface"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_home_team_logo"
                app:layout_constraintBottom_toBottomOf="@id/iv_home_team_logo"
                android:id="@+id/tv_score"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_home_team_logo"
                app:layout_constraintEnd_toStartOf="@id/iv_away_team_logo"
                app:layout_constraintTop_toBottomOf="@id/tv_score"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tv_time"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintBottom_toTopOf="@id/tv_away_team"
                android:id="@+id/iv_away_team_logo"
                android:contentDescription="@string/away_team_logo"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_away_team_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tv_away_team"
                android:textColor="?colorOnSurface"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_event_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/rv_incidents"
        android:visibility="gone"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_event_details"
        android:id="@+id/ll_no_results_yet">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/no_results_yet"
            android:textSize="16sp"
            android:padding="16dp"
            android:background="@drawable/shape_no_results_bg"
            android:textColor="?colorOnSurfaceVariant"
            android:id="@+id/tv_no_results_yet"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/view_tournament_details"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:id="@+id/btn_view_tournament_details"
            android:background="@drawable/shape_button"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar_event_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/pb_loading_incidents"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar_event_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_no_connection_loading_incidents"
        android:text="@string/no_connection_loading_events"
        android:visibility="gone"
        android:padding="16dp"
        android:textColor="?colorOnSurfaceVariant"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>