<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbar_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tl_sports"
        android:background="?colorPrimary"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_toolbar_home"
            >

            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_sofascore"
                android:contentDescription="@string/logo_sofascore"
                android:id="@+id/iw_logo_sofascore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="14dp"
                app:tint="?colorSurface"
                />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_settings"
                android:scaleType="centerInside"
                android:contentDescription="@string/settings"
                android:id="@+id/iw_icon_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:background="@color/transparent"
                app:tint="?colorSurface"
                />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_leagues"
                android:scaleType="centerInside"
                android:contentDescription="@string/leagues"
                android:id="@+id/iw_icon_leagues"
                app:layout_constraintEnd_toStartOf="@id/iw_icon_settings"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:background="@color/transparent"
                app:tint="?colorSurface"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/pb_loading_sports"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_while_loading_sports"
        android:id="@+id/tv_error_while_loading_sports"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tl_sports"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar_home"
        app:layout_constraintBottom_toTopOf="@id/vp_for_sport"
        app:tabMode="scrollable"
        android:background="?colorPrimary"
        app:tabTextAppearance="@style/tab_font_roboto"
        app:tabTextColor="?colorSurface"
        app:tabSelectedTextColor="?colorSurface"
        app:tabIndicatorColor="?colorSurface"
        app:tabRippleColor="?colorSurface"
        app:tabIconTint="?colorSurface"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/vp_for_sport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_sports"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>